refactor responsability moved to middleware, better tests
