# docs/swagger.yaml
@@ -1,11 +1,4 @@
 definitions:
-  types.ErrorResponse:
-    properties:
-      code:
-        type: integer
-      error:
-        type: string
-    type: object
   types.GetFeatureResponse:
     properties:
       code:
@@ -45,6 +38,8 @@ definitions:
         type: string
       time:
         type: string
+      url:
+        type: string
     type: object
 externalDocs:
   description: OpenAPI
@@ -74,26 +69,12 @@ paths:
             type: string
         "500":
           description: Internal Server Error
+          schema:
+            type: string
       summary: Health check
       tags:
       - health
-  /v1/feature:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/types.GetFeatureResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/types.ErrorResponse'
-      summary: Returns happy response and logs the ip
-      tags:
-      - feature
-  /v1/metrics/{ip}:
+  /v1/private/metrics/{ip}:
     get:
       description: Returns the number of metrics that match the given IP parameter
       parameters:
@@ -117,22 +98,38 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/types.ErrorResponse'
+            type: string
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/types.ErrorResponse'
+            type: string
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/types.ErrorResponse'
+            type: string
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/types.ErrorResponse'
+            type: string
       summary: Returns matching metrics for the given IP
       tags:
       - metrics
+  /v1/public/feature:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.GetFeatureResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Returns happy response and logs the ip
+      tags:
+      - feature
 securityDefinitions:
   BasicAuth:
     type: basic
